--- a/Clon_Siie2.1/src/vista/frmdesarrollador.form
+++ b/Clon_Siie2.1/src/vista/frmdesarrollador.form
@@ -25,51 +25,49 @@
       <SubComponents>
         <Menu class="javax.swing.JMenu" name="jMenu1">
           <Properties>
-            <Property name="text" type="java.lang.String" value="File"/>
+            <Property name="text" type="java.lang.String" value="Un gusto verlo de nuevo se&#xf1;or"/>
           </Properties>
         </Menu>
-        <Menu class="javax.swing.JMenu" name="btnAsignarnotas">
+        <Menu class="javax.swing.JMenu" name="btnDocentes">
           <Properties>
-            <Property name="text" type="java.lang.String" value="estudiantes"/>
+            <Property name="text" type="java.lang.String" value="Docente"/>
             <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
               <Color id="Hand Cursor"/>
             </Property>
           </Properties>
           <SubComponents>
-            <MenuItem class="javax.swing.JMenuItem" name="btnNotas">
+            <MenuItem class="javax.swing.JMenuItem" name="btnDnotas">
               <Properties>
                 <Property name="text" type="java.lang.String" value="Notas"/>
-                <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
-                  <Color id="Hand Cursor"/>
-                </Property>
               </Properties>
               <Events>
-                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnNotasActionPerformed"/>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnDnotasActionPerformed"/>
               </Events>
             </MenuItem>
-            <MenuItem class="javax.swing.JMenuItem" name="btnListaEstudiantes">
+            <MenuItem class="javax.swing.JMenuItem" name="btnDlista">
               <Properties>
                 <Property name="text" type="java.lang.String" value="Listado"/>
-                <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
-                  <Color id="Hand Cursor"/>
-                </Property>
               </Properties>
               <Events>
-                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnListaEstudiantesActionPerformed"/>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnDlistaActionPerformed"/>
               </Events>
             </MenuItem>
-            <MenuItem class="javax.swing.JMenuItem" name="btnPromedio">
+            <MenuItem class="javax.swing.JMenuItem" name="btnDpromedio">
               <Properties>
-                <Property name="text" type="java.lang.String" value="promedio academico"/>
-                <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
-                  <Color id="Hand Cursor"/>
-                </Property>
+                <Property name="text" type="java.lang.String" value="Promedio del grupo"/>
               </Properties>
-              <Events>
-                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnPromedioActionPerformed"/>
-              </Events>
             </MenuItem>
           </SubComponents>
+        </Menu>
+        <Menu class="javax.swing.JMenu" name="btnAlumno">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="Alumno"/>
+          </Properties>
+        </Menu>
+        <Menu class="javax.swing.JMenu" name="btnAdmin">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="Administrador"/>
+          </Properties>
         </Menu>
       </SubComponents>
     </Menu>
